--- a/WebApp/Pages/Index.cshtml
+++ b/WebApp/Pages/Index.cshtml
@@ -1,9 +1,70 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home Page";
 }
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>NexTurnEventBooking App.</p>
+
+<div class="container mt-5">
+    <div class="row">
+        <div class=" col-5">
+            <form>
+                <fieldset>
+                    <legend> <b>Book Venue </b></legend>
+
+                    <label for="Event" class="form-label mt-3"> <b> Event Type </b></label>
+                    <select id="Event" class="form-select" >
+                       
+
+                    </select>
+
+                    <label for="Vanue" class="form-label"><b>Vanue Type </b></label>
+                    <select id="Vanue" class="form-select" placeholder="Hyderabad">
+                        
+
+                    </select>
+
+                    <div class="mb-3">
+                        <label for="formGroupExampleInput" class="form-label"> <b>No.Of Guest </b></label>
+                        <input type="number" class="form-control" id="formGroupExampleInput" placeholder=50>
+                    </div>
+
+                    <div class="mb-3 mb-2">
+                        <label for="formGroupExampleInput1" class="form-label"><b>Bokking Date </b></label>
+                        <input type="date" class="form-control" id="formGroupExampleInput1" placeholder="2023-10-25">
+                    </div>
+
+
+                    <button type="submit" class="btn btn-primary">Book Event</button>
+
+                </fieldset>
+            </form>
+
+        </div>
+        <div class="col-1"></div>
+        <div class=" col-6 px-2 pt-2">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://media.istockphoto.com/id/479977238/photo/table-setting-for-an-event-party-or-wedding-reception.jpg?s=612x612&w=0&k=20&c=yIKLzW7wMydqmuItTTtUGS5cYTmrRGy0rXk81AltdTA=" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://wp-media-partyslate.imgix.net/2020/08/60th-birthday-weekend-in-ojai-night-2_143099.jpg?auto=compress%2Cformat&ixlib=php-3.3.1" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://cdn0.weddingwire.in/vendor/8601/3_2/960/jpeg/whatsapp-image-2019-02-15-at-6-17-14-pm_15_188601.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+        </div>
+    </div>
+
 </div>
