--- a/WebApp/Pages/Index.cshtml
+++ b/WebApp/Pages/Index.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
+<div class="text-center">
+<h1>Welcome to EventBooking Web Application</h1>
+</div>
+@*
 <div class="container mt-5">
     <div class="row">
         <div class=" col-5">
@@ -67,4 +70,4 @@
         </div>
     </div>
 
-</div>
+</div>*@
